--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,13 @@ h1 {
   background-color: #FFDD95;
   margin-left: 10%;
   margin-top: 10%;
-
+/* height:800px;
+width:800px; */
 }
 
 .grid {
   display: grid;
-  grid-template-columns: 600px 700px auto;
+  grid-template-columns: 400px 700px auto;
   grid-template-rows: 1fr 1fr;
   background-color: #FF9843;
   grid-gap: 10px;
@@ -30,7 +31,7 @@ h1 {
 
 .grid > div {
   background-color: #FFDD95;
-  padding: 10px;
+  /* padding: 10px; */
 }
   .box1 {
       height: 100px;
@@ -46,4 +47,10 @@ h1 {
 
   .middlepic {
     text-align: center;
+  }
+
+  .benbox {
+    width:50%;
+    height: 50%;
+    border: 5px solid pink;
   }
