--- a/styleslevel1.css
+++ b/styleslevel1.css
@@ -47,18 +47,52 @@ h1 {
   border: 5px solid pink;
   background-color: #ffdd95;
 }
-  .box1 {
-      height: 100px;
-      width: 100px;
-      background-color: #FFFF;
-  }
+.box1 {
+  height: 100px;
+  width: 100px;
+  background-color: #ffff;
+}
 
-  .box2 {
-      height: 100px;
-      width: 100px;
-      background-color: #FFFF;
-  }
+.box2 {
+  height: 100px;
+  width: 100px;
+  background-color: #ffff;
+}
 
-    .back-face {
-      background-color: #456b91;
-    }
+.back-face {
+  background-color: #456b91;
+}
+
+#endLevelSection {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+
+#endLevelDiv {
+  width: 800px;
+  height: 400px;
+  background: white;
+  padding: 20px 0 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 5px;
+}
+
+#btnAgain{
+  background-color: #ff9843;
+  height: 30px;
+  width: 200px;
+}
+
+.endLevelDiv p {
+  text-align: center;
+}
