--- a/styleslevel1.css
+++ b/styleslevel1.css
@@ -1,10 +1,25 @@
 body {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   background-color: #ff9843;
+  font-family: 'Roboto', sans-serif;
+  /* margin: 0; */
 }
+
 h1 {
   text-align: center;
+}
+
+#timer {
+  background-color:#ffdd95;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 50px;
+  width: 200px;
+  height:70px;
+  margin:0;
+
 }
 
 .main-container {
