--- a/styleslevel1.css
+++ b/styleslevel1.css
@@ -110,10 +110,12 @@ h1 {
 
 .hidden {
   display: none !important;
+  background-color: #ffffff;
 }
 
 .show {
   display: block;
+  background-color: #ffffff;
 }
 
 .levelBox {
@@ -122,4 +124,8 @@ h1 {
       height: 30px;
         width: 200px;
 
+}
+
+.b{
+  background-color: #ffffff;
 }
